--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,6 +10,7 @@
 	<link rel="icon" href="favicon.png">
 	<link rel="manifest" href="manifest.json">
 	<link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+	<script src="https://use.fontawesome.com/b070c8f1df.js"></script>
 	<title>Movie Catalogue</title>
 </head>
 <body>
@@ -26,10 +27,13 @@
 			<ul>
 				<li><a href="#/now-playing">Now Playing</a></li>
 				<li><a href="#/upcoming">Upcoming</a></li>
+				<li><a href="#/like">Liked Movies</a></li>
 			</ul>
 		</nav>
 	</header>
+
 	<main id="mainContent"></main>
+	
 	<footer>
 		<p>All data obtained from <a href="https://themoviedb.org" target="_blank" rel="noreferrer">TheMovieDB</a></p>
 	</footer>
